--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "gta-concession",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "backend/index.js",
   "scripts": {
+    "start": "node backend/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -16,7 +17,7 @@
     "url": "https://github.com/srammars/gta-concession/issues"
   },
   "homepage": "https://github.com/srammars/gta-concession#readme",
-  "description": "",
+  "description": "Gestion de concession automobile GTA",
   "dependencies": {
     "cloudinary": "^2.6.0",
     "dotenv": "^16.4.7",
