--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,14 @@
 {
-    "version": 2,
     "builds": [
       {
-        "src": "api/**/*.js",
-        "use": "@vercel/node"
+        "src": "public/**/*",
+        "use": "@vercel/static"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "/public/$1"
       }
     ]
   }
