--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "description": "Gestion de concession automobile GTA",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "body-parser": "^2.2.0",
     "cloudinary": "^2.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
